--- a/go_module/test/views/hello.html
+++ b/go_module/test/views/hello.html
@@ -1,7 +1,7 @@
 <!-- file: ./views/hello.html -->
 <html>
 <head>
-    <title>Hello Page</title>
+	<title>SayariMio is Sayarii</title>
 </head>
 <body>
     <h1>{{.message}}</h1>
