--- a/go_module/test/views/hello.html
+++ b/go_module/test/views/hello.html
@@ -13,11 +13,16 @@
             <v-main class="teal lighten-4">
               <v-container > 
     <v-banner max-width=600 Elevation="5" max-counter=8 color="teal lighten-5">
-        {{.message}}
-            <v-btn @click="goQuery" class="ma-2" outlined  color="teal"  fab color="indigo">
+      <span class="teal--text">{{.message}}</span>
+       <v-btn @click="goQuery" class="ma-2" outlined  color="teal"  fab color="indigo">
            Go
-          </v-btn>
+        </v-btn>
     </v-banner>
+
+    <v-banner max-width=600 Elevation="5" max-counter=8 color="teal lighten-5">
+      <span class="teal--text">访问次数:{{.times}}</span>
+        </v-btn>
+  </v-banner>
     </v-container>
     </v-main>
     </v-app>
