--- a/go_module/test/views/upload_form.html
+++ b/go_module/test/views/upload_form.html
@@ -6,7 +6,7 @@
     </head>
     
     <body>
-        <form enctype="multipart/form-data" action="http://sayarii.art/upload" method="POST">
+        <form enctype="multipart/form-data" action="https://sayarii.art/upload" method="POST">
             <input type="file" name="uploadfile" />
             <input type="hidden" name="token" value="{{.}}" />
             <input type="submit" value="upload" />
