--- a/go_module/test/views/query_song.html
+++ b/go_module/test/views/query_song.html
@@ -42,7 +42,9 @@
                         >
                     </v-textarea>
                  </v-col>  
-                 
+                 <v-col cols="12" sm ="8" md ="8" lg="10" xl="12">  
+                  <p><span v-html="rawHtml">{{rs.issue}}</span></p>
+               </v-col>  
                 
             </form>
             
