--- a/go_module/test/views/query_song.html
+++ b/go_module/test/views/query_song.html
@@ -43,7 +43,7 @@
                     </v-textarea>
                  </v-col>  
                  <v-col cols="12" sm ="8" md ="8" lg="10" xl="12">  
-                  <p><span v-html="rawHtml">{{rs.issue}}</span></p>
+			 <p><a :href="issue">...</a></p>
                </v-col>  
                 
             </form>
@@ -67,7 +67,8 @@
       vuetify: new Vuetify(),
       data:{
           search:'',
-          rs:''
+          rs:'',
+	  issue:''
       },
       methods: {
         submit(eve) {
