--- a/go_module/test/views/upload_form.html
+++ b/go_module/test/views/upload_form.html
@@ -10,7 +10,7 @@
             <input type="file" name="uploadfile" />
             <input type="hidden" name="token" value="{{.}}" />
             <input type="submit" value="upload" />
-            <span><i>每天定时删除7日前文件</i></span>
+            <p><span><i>每天定时删除7日前文件</i></span>
         </form>
     </body>
     
